# kimera-workspace

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TEST_PLAN.md  run_build_catkin_in_env.sh  run_setup_workspace_in_env.sh
docs/: patches.md
patches/Kimera-RPGO/: 0001-Fix-GTSAM-4.2-compilation-setDiagonalDamping.patch
patches/Kimera-Semantics/: 0001-Patches-for-conda-forge-RoboStack-build-on-Ubuntu-22.patch
patches/Kimera-VIO/: 0001-Update-EuRoC-dataset-link-to-ETH-Research-Collection.patch  0002-Include-opencv2-viz.hpp-explicitly-for-Ubuntu-22.04-.patch  0003-Fix-Tracker-name-ambiguity-missing-viz-include-in-te.patch  0004-Disable-Pangolin-add-explicit-includes-autoInit-1-fo.patch  0005-Fix-glog-target-linking-conflict-with-conda-env.patch
patches/Kimera-VIO-ROS/: 0001-Dereference-PointCloudXYZRGB-Ptr-before-ROS-publish.patch
patches/kalibr/: 0001-Fix-Boost-endian-SuiteSparseQR-and-OpenCV-V4L2-build.patch  0002-Fix-SuiteSparseQR-forward-declaration-and-boost-bind.patch
patches/voxblox/: 0001-Patches-for-conda-forge-RoboStack-build-on-Ubuntu-22.patch
scripts/: build_catkin.sh  download_datasets.sh  full_vio_semantics_demo.launch  install_dependencies.sh  kimera_ros.env.yaml  setup_ros_env.sh  setup_workspace.sh  test_components.sh
